tests/result/fail/types/const-volatile-void-error.fail.cpp
#include "tim/result/Result.hpp"


int main() { tim::Result<int, const volatile void> r; }
